--- a/src/html/interviews/intrvw_a_d05.html
+++ b/src/html/interviews/intrvw_a_d05.html
@@ -4,7 +4,7 @@
         module.exports = {
             text: {
                 title: "das nahm so Überhand",
-                main: [`[Übersetzung folgt]`],
+                main: [`[Transkription folgt]`],
                 author: "Dorina und Andreas S.",
                 authorLink: "../bio.html#dorinasandreass",
                 audioFilePath: "/public/audio/A_D_05.mp3",
