--- a/src/html/interviews/intrvw_dhn01.html
+++ b/src/html/interviews/intrvw_dhn01.html
@@ -14,7 +14,7 @@
                 imageFilePath: "/public/images/DHN_01.jpg",
                 imageCaption: "Karl-Marx-Stadt jetzt Chemnitz, 1979. Bildcredit: Bundesarchiv, Bild 183-U0530-0019 / CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_mm03.html",
+                prevLink: "intrvw_dm04.html",
                 nextLink: "intrvw_mm04.html",
             },
         };
