--- a/src/html/interviews/intrvw_dm02.html
+++ b/src/html/interviews/intrvw_dm02.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -12,7 +12,7 @@
                 authorLink: "../bio.html#macou",
                 audioFilePath: "/public/audio/DM_02.mp3",
                 imageFilePath: "/public/images/DM_02.jpg",
-                imageCaption: "Hoyerswerda 1991 - Bild mit freundlicher Genehmigung von Detlev Kennerth",
+                imageCaption: "Hoyerswerda 1991 - Bild mit freundlicher Genehmigung von Detlev Konnerth",
                 additionalContext:
                     "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
                 prevLink: "intrvw_ajm03.html",
