--- a/src/html/interviews/intrvw_mm03.html
+++ b/src/html/interviews/intrvw_mm03.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -14,7 +14,7 @@
                 imageCaption: "Eberswalde, 1987. Bild mit freundlicher Genehmigung von Landesbetrieb Forst Eberswalde",
                 additionalContext: "",
                 prevLink: "intrvw_jr03.html",
-                nextLink: "intrvw_dhn01.html",
+                nextLink: "intrvw_b_l02.html",
             },
         };
     </script>
