--- a/src/html/interviews/intrvw_ot01.html
+++ b/src/html/interviews/intrvw_ot01.html
@@ -3,13 +3,13 @@
     <script locals>
         module.exports = {
             text: {
-                title: "du hattest ja gar nicht die Möglichkeit",
+                title: "es war nicht böse gemeint",
                 main: [
-                    `Du hattest ja gar nicht die Möglichkeit, sich kulturell miteinander irgendwo vertraut zu machen, dass die die Möglichkeit haben, sich an unsere Kultur zu gewöhnen und wir an ihre, das Verständnis einfach da ist für einander. Die wurden dann sicherlich abgestempelt alle, weil wenn was passiert ist … und wir sind vielleicht sicherlich auch von denen abgestempelt … einer verallgemeinert dann ganz schnell. Es gab so ein Begriff, der war auch nicht böse gemeint … na ja heute ist es sowieso ein bisschen schwierig. Viele haben „Schningschnongs“ gesagt. Es gab weitere verschiedene Begriffe zum Beispiel „Fidschis“. Es klingt jetzt ganz schlimm, aber irgendwie war es nicht böse gemeint. Für uns gab es auch viele Begriffe. Die Vietnamesen hat man einfach als fleißig und irgendwie nicht so auffällig wahrgenommen. Die wurden nicht so negativ behaftet wie vielleicht die Mosambikaner oder so.`,
+                    `Die Möglichkeit hatten wir gar nicht, mit denen in Kontakt, privat in Kontakt zu kommen. Ich weiß nicht, die konnten sich ja relativ frei bewegen ... dort in diesen Gaststätten so oder zum Tanzen waren die auch da. Ich weiß nicht, ob überhaupt ... es gab wahrscheinlich nicht viel Leute, die auch so den Kontakt, privater Kontakt zu denen gesucht haben. Also die Möglichkeit, würde ich sagen, gab's bestimmt ... Ja, aber wie? Wäre vielleicht eher möglich gewesen, wenn jetzt die Familien mitgewesen wären, dass man sich vielleicht ... aber so kannst du dich ja schlecht privat mit den Männern da treffen oder so. [...] Du hattest ja gar nicht die Möglichkeit, sich kulturell miteinander irgendwo vertraut zu machen, dass die die Möglichkeit haben, sich an unsere Kultur zu gewöhnen und wir an ihre, das Verständnis einfach da ist für einander. Die wurden dann sicherlich abgestempelt alle, weil wenn was passiert ist ... und wir sind vielleicht sicherlich auch von denen abgestempelt ... einer verallgemeinert dann ganz schnell.`,
                 ],
                 author: "Dennis und Silke O.",
                 authorLink: "../bio.html#silkedenniso",
-                audioFilePath: "/public/audio/OT_01.mp3",
+                audioFilePath: "/public/audio/OT_01bis.mp3",
                 imageFilePath: "/public/images/OT_01.jpg",
                 imageCaption: "Arbeiter vom Kombinat ‚Schwarze Pumpe‘. Bildcredit: Bundesarchiv, Bild 183-32626-0012 CC-BY-SA 3.0",
                 additionalContext: "",
