--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -50,7 +50,7 @@
                         <!-- Plattenbauten mittelhoch -->
                         <div class="relative aspect-3/2 w-full pt-8">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_07.jpg" />
-                            <span class="absolute w-full text-right text-xs">mit freundlicher Genehmigung von Detlev Kennerth</span>
+                            <span class="absolute w-full text-right text-xs">mit freundlicher Genehmigung von Detlev Konnerth</span>
                         </div>
                     </div>
                 </div>
