--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -109,7 +109,7 @@
                         <!-- Bus 1 -->
                         <div class="relative aspect-3/2 w-full md:-translate-y-2/3">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_026.jpg" />
-                            <span class="absolute w-full text-left text-xs"> mit freundlicher Genehmigung von Detlev Kennerth </span>
+                            <span class="absolute w-full text-left text-xs"> mit freundlicher Genehmigung von Detlev Konnerth </span>
                         </div>
                     </div>
                     <div class="w-full pt-8 md:w-1/2 md:pt-0">
@@ -117,7 +117,7 @@
                         <div class="relative aspect-3/2 w-full md:-translate-x-[10%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_027.jpg" class="object-cover" />
                             <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
-                                mit freundlicher Genehmigung von Detlev Kennerth
+                                mit freundlicher Genehmigung von Detlev Konnerth
                             </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                         <div class="relative order-2 aspect-[15/9] w-full md:order-1 md:-translate-y-[110%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_030.jpg" class="object-cover" />
                             <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
-                                mit freundlicher Genehmigung von Detlev Kennerth
+                                mit freundlicher Genehmigung von Detlev Konnerth
                             </div>
                         </div>
 
@@ -185,7 +185,7 @@
                         <div class="relative aspect-3/2 w-full pb-0 md:pb-8">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_031.jpg" />
                             <div class="absolute z-10 w-full overflow-visible text-right text-xs">
-                                mit freundlicher Genehmigung von Detlev Kennerth
+                                mit freundlicher Genehmigung von Detlev Konnerth
                             </div>
                         </div>
 
@@ -194,7 +194,7 @@
                             <div class="absolute">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_032.jpg" />
                                 <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
-                                    mit freundlicher Genehmigung von Detlev Kennerth
+                                    mit freundlicher Genehmigung von Detlev Konnerth
                                 </div>
                             </div>
                         </div>
