--- a/src/html/interviews/intrvw_b_l01.html
+++ b/src/html/interviews/intrvw_b_l01.html
@@ -13,8 +13,8 @@
                 imageFilePath: "/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_060.jpg",
                 imageCaption: "Blick auf das Zentrum der DDR-Hauptstadt, 1981. Bildcredit: Bundesarchiv, Bild 183-Z0310-041/CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_a_d04.html",
-                nextLink: "intrvw_dm02.html",
+                prevLink: "intrvw_mm04.html",
+                nextLink: "intrvw_ajm01.html",
             },
         };
     </script>
