--- a/src/html/interviews/intrvw_mm04.html
+++ b/src/html/interviews/intrvw_mm04.html
@@ -21,7 +21,7 @@
                 imageCaption: "Straßenbahn in Dresden, um 1982. Bildcredit: Bundesarchiv, Bild 183-1982-0211-018 / CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_dhn01.html",
-                nextLink: "intrvw_ajm01.html",
+                nextLink: "intrvw_b_l01.html",
             },
         };
     </script>
