mp3 replacing, old file deletion, empty interview links removed in bio.html

--- a/src/html/interviews/intrvw_ot01.html
+++ b/src/html/interviews/intrvw_ot01.html
@@ -9,7 +9,7 @@
                 ],
                 author: "Dennis und Silke O.",
                 authorLink: "../bio.html#silkedenniso",
-                audioFilePath: "/public/audio/OT_01bis.mp3",
+                audioFilePath: "/public/audio/OT_01.mp3",
                 imageFilePath: "/public/images/OT_01.jpg",
                 imageCaption: "Arbeiter vom Kombinat ‚Schwarze Pumpe‘. Bildcredit: Bundesarchiv, Bild 183-32626-0012 CC-BY-SA 3.0",
                 additionalContext: "",
