--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -104,7 +104,7 @@
                         >
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/04_OT_05.mp3", "title": ""}'
+                                locals='{"audioFilePath": "../../../public/audio/OT_04.mp3", "title": ""}'
                             >
                             </include>
                         </div>
