--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -120,7 +120,7 @@
                         <div class="mx-auto w-3/5 md:w-1/3">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'
+                                locals='{"audioFilePath": "../../../public/audio/OT_01.mp3", "title": "es war nicht böse gemeint"}'
                             >
                             </include>
                         </div>
