--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -219,11 +219,11 @@
 
                 <div class="md:h-20"></div>
 
-                <div class="-mx-0.5 flex translate-y-[120%] items-center justify-start md:hidden">
+                <div class="-mx-0.5 flex translate-y-[120%] items-center justify-between md:hidden">
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve3.html">
                         <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
                     </a>
-                    <a class="hidden text-center font-crimson-text tracking-tight text-gray-100" href="./ve5.html">
+                    <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve5.html">
                         <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
                     </a>
                 </div>
