--- a/src/html/virtual-exhibits/ve5.html
+++ b/src/html/virtual-exhibits/ve5.html
@@ -35,7 +35,7 @@
 
                     <!-- Audio "wie ein Theater beobachtet" -->
                     <div
-                        class="mx-auto h-fit w-4/5 pt-8 md:absolute md:left-1/2 md:top-full md:mx-0 md:w-2/5 md:-translate-x-1/2 md:-translate-y-1/2 md:pt-0"
+                        class="mx-auto h-fit w-1/2 pt-8 md:absolute md:left-1/2 md:top-full md:mx-0 md:w-2/5 md:-translate-x-1/2 md:-translate-y-1/2 md:pt-0"
                     >
                         <include
                             src="./partials/interview_audio.html"
@@ -48,55 +48,55 @@
                 <div class="flex h-fit w-full">
                     <div class="mx-auto flex w-full flex-col items-center justify-between pt-2 md:mx-0 md:w-full md:flex-row md:pt-32">
                         <!-- Fingerzeig-->
-                        <div class="mx-auto aspect-2/3 w-1/2 overflow-hidden object-cover md:mx-0">
+                        <div class="mx-auto aspect-2/3 w-3/4 overflow-hidden object-cover pt-8 md:mx-0 md:w-2/3 md:pt-0">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_052.jpg" />
                         </div>
 
-                        <div class="w-1/3">
-                            <div>
+                        <div class="w-3/5 pt-8 md:w-1/3 md:pt-0">
+                            <div class="text-left">
                                 Hier ist uns nichts passiert, den Anschlag in Rostock-Lichtenhagen haben wir nur im Fernsehen mitbekommen.
                                 Hier auf der Straſe wurde uns nur von Weitem zugerufen "Ausländer raus".
                             </div>
                             <div class="h-4"></div>
-                            <div>Aber das ist normal.</div>
+                            <div class="text-left">Aber das ist normal.</div>
                         </div>
                     </div>
                 </div>
 
-                <div class="flex h-fit w-full">
-                    <div class="relative flex w-full items-end justify-between pt-8 md:flex-row md:pt-24">
-                        <div class="mr-[10%] w-1/3 md:translate-y-1/3">
-                            <div>
+                <div class="flex h-fit w-full pt-8 md:pt-0">
+                    <div class="relative flex w-full flex-col-reverse items-center justify-between pt-8 md:flex-row md:items-end md:pt-24">
+                        <div class="w-3/5 pt-8 md:mr-[10%] md:w-1/3 md:translate-y-1/3 md:pt-0">
+                            <div class="text-left">
                                 Im Oktober mussten wir aus dem Wohnheim raus, wir sind in einem Bus eingestiegen, nach Frankurt am Main
                                 gefahren worden und von dort zurück nach Mosambik dann.
                             </div>
                             <div class="h-4"></div>
-                            <div>
+                            <div class="text-left">
                                 Wir waren alle traurig, niemand hat sich unterhalten. Jeder hat an seinem Platz gesessen und überlegt. Was
                                 wird wohl mit uns jetzt, wenn wir zurück nach Mosambik kommen, denn in Mosambik war Bürgerkrieg.
                             </div>
                         </div>
 
                         <!-- Porträt gelbe Bluse -->
-                        <div class="mx-auto aspect-3/2 w-2/3 md:mx-0">
+                        <div class="mx-auto aspect-3/2 w-3/4 md:mx-0 md:w-2/3">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_053.jpg" />
                         </div>
                     </div>
                 </div>
 
-                <div class="h-fit w-full -translate-x-[5%] pt-36">
-                    <div class="flex md:flex-col">
-                        <div class="flex justify-end md:flex-row">
+                <div class="h-fit w-full pt-12 md:-translate-x-[5%] md:pt-36">
+                    <div class="flex flex-col">
+                        <div class="flex justify-center md:flex-row md:justify-end">
                             <!-- Bushaltestelle-->
-                            <div class="relative z-50 aspect-3/2 w-1/2">
+                            <div class="relative z-50 aspect-3/2 w-3/4 md:w-1/2">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_054.jpg" />
                             </div>
                         </div>
 
-                        <div class="flex md:-translate-y-[15%] md:flex-row">
-                            <div class="flex w-3/5 md:flex-col">
+                        <div class="flex flex-col items-center pt-16 md:-translate-y-[15%] md:flex-row md:items-start md:pt-0">
+                            <div class="flex w-full flex-col items-center md:w-3/5 md:items-start">
                                 <!-- Audio "mm 02" -->
-                                <div class="z-40 mx-auto w-1/5 md:translate-y-1/2">
+                                <div class="z-40 mx-auto w-2/5 md:w-1/5 md:translate-y-1/2">
                                     <include
                                         src="./partials/interview_audio.html"
                                         locals='{"audioFilePath": "../../../public/audio/MM_02.mp3", "title": ""}'
@@ -104,12 +104,12 @@
                                     </include>
                                 </div>
                                 <!-- Gemüse-->
-                                <div class="relative aspect-3/2 w-full">
+                                <div class="relative aspect-3/2 w-3/4 -translate-y-[15%] md:w-full md:-translate-y-0">
                                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_055.jpg" />
                                 </div>
                             </div>
 
-                            <div class="flex w-2/5 items-start justify-end md:flex-col">
+                            <div class="flex w-3/5 items-start justify-end md:w-2/5 md:flex-col">
                                 <!-- Audio "Für mich war das ein Unfall" -->
                                 <div class="mx-auto w-full md:-translate-x-[15%] md:-translate-y-1/2">
                                     <include
@@ -123,11 +123,11 @@
                     </div>
                 </div>
 
-                <div class="-mt-[10%] h-fit w-full">
-                    <div class="flex items-end justify-between md:flex-row">
-                        <div class="w-1/2">
+                <div class="h-fit w-full md:-mt-[10%]">
+                    <div class="flex flex-col-reverse items-center justify-between pt-8 md:flex-row md:items-end md:pt-0">
+                        <div class="w-full md:w-1/2">
                             <!-- Audio "Hoyerswerda hat den Anfang gemacht" -->
-                            <div class="mx-auto w-4/5 md:mr-[100%] md:-translate-y-full">
+                            <div class="mx-auto w-2/3 pt-12 md:mr-[100%] md:w-4/5 md:-translate-y-full md:pt-0">
                                 <include
                                     src="./partials/interview_audio.html"
                                     locals='{"audioFilePath": "../../../public/audio/J_R_03.mp3", "title": "Hoyerswerda hat den Anfang gemacht"}'
@@ -135,17 +135,17 @@
                                 </include>
                             </div>
                         </div>
-                        <div class="w-[45%]">
+                        <div class="w-full md:w-[45%]">
                             <!-- Basketball-->
-                            <div class="relative aspect-3/2 w-full">
+                            <div class="relative mx-auto aspect-3/2 w-3/4 md:mx-0 md:w-full">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_056.jpg" />
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="flex h-fit flex-col items-end justify-between pt-8 md:flex-row md:pt-20">
-                    <div class="w-1/2">
+                <div class="flex h-fit flex-col items-center justify-between pt-12 md:flex-row md:items-end md:pt-20">
+                    <div class="w-3/4 md:w-1/2">
                         <div class="w-full">
                             <!-- Postkarte -->
                             <div class="relative aspect-2/3 w-full">
@@ -155,7 +155,7 @@
                         </div>
                     </div>
 
-                    <div class="w-1/2">
+                    <div class="w-4/5 pt-8 md:w-1/2 md:pt-0">
                         <!-- Audio "Heimat hin oder her" -->
                         <div class="mx-auto w-4/5 md:-translate-y-1/2">
                             <include
@@ -167,11 +167,11 @@
                     </div>
                 </div>
 
-                <div class="h-fit w-1/3 md:pt-44">
-                    <div class="flex -translate-x-[5%] items-start justify-start md:flex-col">
-                        <div>Die Polizei ist so aggressiv heute.</div>
+                <div class="h-fit w-full pt-8 md:w-1/3 md:pt-44">
+                    <div class="flex flex-col items-center justify-between md:-translate-x-[5%] md:items-stretch md:justify-start">
+                        <div class="w-3/5 text-left md:w-auto">Die Polizei ist so aggressiv heute.</div>
                         <!-- <div class="h-4"></div> -->
-                        <div>
+                        <div class="w-3/5 text-left md:w-auto">
                             Ich weiß nicht was sie für Idee oder welche Orientierung die haben. Damals, in der DDR, gab es solche Sachen
                             nicht, mit der Polizei hatten wir keine Probleme. Wenn ich heute ein Problem habe, muss ich selber was
                             unternehmen, selber was tun bevor es zu spät ist. Ich kann nicht warten bis die Polizei hilft, wenn etwas in
@@ -179,7 +179,7 @@
                             Deshalb ist die Polizei nichts für mich.
                         </div>
                         <!-- Audio "mm03" -->
-                        <div class="mx-auto w-1/2">
+                        <div class="mx-auto w-1/2 pt-8 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/MM_03.mp3", "title": ""}'
@@ -189,10 +189,10 @@
                     </div>
                 </div>
 
-                <div class="flex h-fit -translate-y-[15%] flex-col items-end justify-between md:flex-row">
-                    <div class="w-2/5">
+                <div class="flex h-fit flex-col items-center justify-between pt-8 md:-translate-y-[15%] md:flex-row md:items-end md:pt-0">
+                    <div class="order-2 w-full pt-8 md:order-none md:w-2/5 md:pt-0">
                         <!-- Audio "ich war ein richtiger Sklave" -->
-                        <div class="mr-auto w-4/5 md:-translate-y-[250%]">
+                        <div class="mx-auto w-3/5 pt-8 md:mr-auto md:w-4/5 md:-translate-y-[250%] md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/DM_04.mp3", "title": "ich war ein richtiger Sklave"}'
@@ -201,7 +201,7 @@
                         </div>
                     </div>
 
-                    <div class="w-3/5">
+                    <div class="w-3/4 md:w-3/5">
                         <div class="w-full">
                             <!-- Wand -->
                             <div class="relative aspect-2/3 w-full overflow-hidden">
@@ -211,11 +211,13 @@
                     </div>
                 </div>
 
-                <div class="flex h-fit -translate-y-[25%] flex-col justify-between md:flex-row">
-                    <div class="w-1/2">
+                <div
+                    class="flex h-fit flex-col items-center justify-between pt-8 md:-translate-y-[25%] md:flex-row md:items-stretch md:pt-0"
+                >
+                    <div class="w-11/12 md:w-1/2">
                         <div class="w-full">
                             <!-- Nazi gruppe -->
-                            <div class="relative aspect-2/3 w-full overflow-hidden">
+                            <div class="relative w-full overflow-hidden md:aspect-2/3">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_059.jpg" />
                                 <span class="absolute w-full text-right text-xs"
                                     >Filmstill aus <span class="italic">The Truth Lies in Rostock</span>/Spectacle</span
@@ -224,8 +226,8 @@
                         </div>
                     </div>
 
-                    <div class="flex w-1/2 flex-col items-center justify-center">
-                        <div class="h-1/2 w-4/5">
+                    <div class="flex flex-col items-center justify-center pt-24 md:w-1/2 md:pt-0">
+                        <div class="w-4/5 text-left md:h-1/2">
                             Ich fahre nach wie vor gerne nach Lichtenhagen. Wenn ich das Sonnenblumenhochhaus jetzt betrachte, wenn ich da
                             vorbei fahre, sehe ich das jetzt nicht im Zusammenhang mit dem was da passiert ist. Das... dieses
                             Sonnenblumenhochhaus ist genau so... genau dieses Motiv, diese Sonnenblume, ist irgendwo Kunst. Für mich ist das
@@ -236,11 +238,11 @@
                     </div>
                 </div>
 
-                <div class="-mx-0.5 flex translate-y-[120%] items-center justify-start md:hidden">
+                <div class="-mx-0.5 flex translate-y-[120%] items-center justify-between md:hidden">
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve4.html">
                         <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
                     </a>
-                    <a class="hidden text-center font-crimson-text tracking-tight text-gray-100" href="./ve2.html">
+                    <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve2.html">
                         <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
                     </a>
                 </div>
