language switching via bruteforce, removed old js calls

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Project"}' />
@@ -6,7 +6,7 @@
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "about"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "about", "lang": "EN"}'></include>
         </header>
 
         <main class="m-auto">
