--- a/src/html/english.html
+++ b/src/html/english.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - English"}' />
