--- a/src/html/interviews/intrvw_ls01.html
+++ b/src/html/interviews/intrvw_ls01.html
@@ -28,7 +28,7 @@
         />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ls01"}'></include>
         </header>
