--- a/src/html/project.html
+++ b/src/html/project.html
@@ -12,7 +12,7 @@
         <main class="mb-24 flex flex-col items-center justify-start font-crimson-text text-lg font-semibold tracking-tight">
             <!-- 1. -->
             <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
-                <div class="w-full text-left md:w-1/2 md:pr-4 lg:pr-8">
+                <div data-lang-key="project-1" class="w-full text-left md:w-1/2 md:pr-4 lg:pr-8">
                     <p>
                         Brotherland berichtet von einer Zeit, von der man schwer erzählen kann, ohne den Rassismus und die Gewalt sprachlich
                         zu reproduzieren.
@@ -27,6 +27,7 @@
                 <div class="py-8 md:hidden">
                     <a href="virtual-exhibits/ve2.html">
                         <div
+                            data-lang-key="virtual-exhibit-text"
                             class="flex h-32 w-32 items-center justify-center rounded-full bg-gray-950 p-4 pt-3 text-center font-crimson-text leading-tight tracking-tight text-gray-200 hover:!text-white"
                         >
                             zur virtuellen Ausstellung
@@ -61,7 +62,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="mb-4 w-fit text-left md:mb-0 md:pl-4 lg:pl-8">
+                <div data-lang-key="project-2" class="mb-4 w-fit text-left md:mb-0 md:pl-4 lg:pl-8">
                     <p>
                         Am 9. November 1989 fällt die Berliner Mauer, ein Jahr später wird Deutschland wiedervereinigt. Für viele ein Fest,
                         die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer Zeit,
@@ -82,7 +83,7 @@
             </div>
             <!-- 3. -->
             <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
-                <div class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
+                <div data-lang-key="project-3" class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
                     <p>
                         Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
                         Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
@@ -116,7 +117,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="mb-4 w-fit md:mb-0 md:pl-4 lg:pl-8">
+                <div data-lang-key="project-4" class="mb-4 w-fit md:mb-0 md:pl-4 lg:pl-8">
                     <p>
                         In der tagesaktuellen Berichterstattung und auch der Geschichtsschreibung kamen – und kommen – die Menschen, gegen
                         die sich diese Gewalt richtete, selten zu Wort. Auf die Fragen, wieso (deutsche) Jugendliche den Hitlergruß zeigen
@@ -145,6 +146,7 @@
             <div class="py-8 md:hidden">
                 <a href="virtual-exhibits/ve2.html">
                     <div
+                        data-lang-key="virtual-exhibit-text"
                         class="flex h-32 w-32 items-center justify-center rounded-full bg-gray-950 p-4 pt-3 text-center font-crimson-text leading-tight tracking-tight text-gray-200 hover:!text-white"
                     >
                         zur virtuellen Ausstellung
