--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland", "lang": "HAOHO"}' />
     </head>
 
     <body class="bg-white text-black">
