--- a/src/html/interviews/intrvw_ajm04.html
+++ b/src/html/interviews/intrvw_ajm04.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -23,7 +23,7 @@
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Augusto Jone Munjunga 4"}' />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ajm04"}'></include>
         </header>
