--- a/src/html/interviews/intrvw_b_l02.html
+++ b/src/html/interviews/intrvw_b_l02.html
@@ -25,7 +25,7 @@
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Lam Goltzsch 1"}' />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_b_l01"}'></include>
         </header>
