--- a/src/html/interviews/intrvw_jr01.html
+++ b/src/html/interviews/intrvw_jr01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -25,7 +25,7 @@
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Jan K. und René K. 1"}' />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_jr01"}'></include>
         </header>
