--- a/src/html/interviews/intrvw_mm04.html
+++ b/src/html/interviews/intrvw_mm04.html
@@ -30,7 +30,7 @@
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Moises Mvuama 4"}' />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_mm04"}'></include>
         </header>
