--- a/src/html/interviews/intrvw_ot03.html
+++ b/src/html/interviews/intrvw_ot03.html
@@ -23,7 +23,7 @@
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Dennis und Silke O. 3"}' />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ot03"}'></include>
         </header>
