Book, index & nav, hotswitching, started bios

--- a/src/html/book.html
+++ b/src/html/book.html
@@ -12,7 +12,9 @@
         <main class="m-auto font-crimson-text text-lg font-semibold tracking-tight">
             <div class="flex flex-col items-center justify-start">
                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_buch.jpg" class="h-fit w-4/5" />
-                <div class="py-8">Ein Foto-Text-Buch mit mehr Interviews, Fotos und Archivmaterial ist in Arbeit.</div>
+                <div data-lang-key="book-1" class="py-8">
+                    Ein Foto-Text-Buch mit mehr Interviews, Fotos und Archivmaterial ist in Arbeit.
+                </div>
             </div>
         </main>
     </body>
